tests/baselines/reference/privateInstanceMemberAccessibility.errors.txt
==== tests/cases/compiler/privateInstanceMemberAccessibility.ts (6 errors) ====
    class Base {
        private foo: string;
    }
    
    class Derived extends Base {
        x = super.foo; // error
                  ~~~
!!! privateInstanceMemberAccessibility.ts(6,15): error TS2166: Only public methods of the base class are accessible via the 'super' keyword.
        y() {
            return super.foo; // error
                         ~~~
!!! privateInstanceMemberAccessibility.ts(8,22): error TS2166: Only public methods of the base class are accessible via the 'super' keyword.
        }
        z: typeof super.foo; // error
                  ~~~~~
!!! privateInstanceMemberAccessibility.ts(10,15): error TS1006: Identifier expected; 'super' is a keyword.
                        ~~~
!!! privateInstanceMemberAccessibility.ts(10,21): error TS2166: Only public methods of the base class are accessible via the 'super' keyword.
    
        a: this.foo; // error
           ~~~~
!!! privateInstanceMemberAccessibility.ts(12,8): error TS1006: Identifier expected; 'this' is a keyword.
                ~~~
!!! privateInstanceMemberAccessibility.ts(12,13): error TS2107: 'Base.foo' is inaccessible.
    }